// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFieldNumber is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="alert"
  inputid="1"
  isloading="false"
>
  <oui-validatable-control>
    <input
      aria-label="aria-label"
      class="ouiFieldNumber testClass1 testClass2 ouiFieldNumber--withIcon"
      data-test-subj="test subject string"
      id="1"
      max="8"
      min="1"
      name="elastic"
      step="1"
      type="number"
      value="1"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props controlOnly is rendered 1`] = `
<oui-validatable-control>
  <input
    class="ouiFieldNumber"
    type="number"
  />
</oui-validatable-control>
`;

exports[`OuiFieldNumber props fullWidth is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="true"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldNumber ouiFieldNumber--fullWidth"
      type="number"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props isInvalid is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <oui-validatable-control
    isinvalid="true"
  >
    <input
      class="ouiFieldNumber"
      type="number"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props isLoading is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldNumber ouiFieldNumber-isLoading"
      type="number"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props readOnly is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
  readonly="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldNumber"
      readonly=""
      type="number"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props value no initial value 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldNumber"
      type="number"
      value=""
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldNumber props value value is number 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldNumber"
      type="number"
      value="0"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;
